src/components/layouts/header/header-client.module.css
.container {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 12px 20px 8px 20px;
  background-color: #6666664e;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: background-color 0.5s ease;
}

.containerDark {
  background-color: #000000e2;
}

